--- a/PedraPapaelTesoura/app/src/main/AndroidManifest.xml
+++ b/PedraPapaelTesoura/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:theme="@style/Theme.PedraPapaelTesoura">
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="nosensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
