--- a/MyApplicationFirebaseTest/app/build.gradle
+++ b/MyApplicationFirebaseTest/app/build.gradle
@@ -49,4 +49,8 @@ dependencies {
 
     // Autenticaçao de usuario
     implementation 'com.google.firebase:firebase-auth:21.0.3'
+
+    //Storage
+    implementation 'com.google.firebase:firebase-storage'
+
 }
