--- a/MyApplicationFirebaseTest/app/build.gradle
+++ b/MyApplicationFirebaseTest/app/build.gradle
@@ -50,7 +50,9 @@ dependencies {
     // Autenticaçao de usuario
     implementation 'com.google.firebase:firebase-auth:21.0.3'
 
-    //Storage
+    // Storage
     implementation 'com.google.firebase:firebase-storage'
 
+    // FirebaseUI Storage
+    implementation 'com.firebaseui:firebase-ui-storage:7.2.0'
 }
