--- a/Slider/app/src/main/AndroidManifest.xml
+++ b/Slider/app/src/main/AndroidManifest.xml
@@ -7,7 +7,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Slider" >
+        android:theme="@style/Theme.Slider">
+        <activity
+            android:name=".activity.CadastrarActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.LoginActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
