--- a/Organizze/app/src/main/AndroidManifest.xml
+++ b/Organizze/app/src/main/AndroidManifest.xml
@@ -9,7 +9,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Organizze">
         <activity
-            android:name=".PrincipalActivity"
+            android:name=".activity.ReceitasActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.DespesasActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.PrincipalActivity"
             android:exported="false"
             android:label="@string/title_activity_principal"
             android:theme="@style/Theme.Organizze.NoActionBar" />
