--- a/Organizze/app/build.gradle
+++ b/Organizze/app/build.gradle
@@ -64,4 +64,7 @@ dependencies {
 
     //FloatActionMenu
     implementation 'com.github.clans:fab:1.6.4'
+
+    //Material-Calendar
+    implementation 'com.github.prolificinteractive:material-calendarview:1.5.0'
 }
